# Fae-Studios

./: .gitignore  README.md  index.html
PR2/: CMakeLists.txt  FindSDL2_mixer.cmake  PR2.sln
PR2/Ott - An Elemental Journey/: EarthKMap.cpp  EarthKMap.h  Elements.h  Enemy.h  MapGenerator.cpp  MapGenerator.h  MapState.h  Ott - An Elemental Journey.aps  Ott - An Elemental Journey.cpp  Ott - An Elemental Journey.rc  Ott - An Elemental Journey.vcxproj  Ott - An Elemental Journey.vcxproj.filters  PlayState.h  Resource.h  SDLApplication.cpp  SDLApplication.h  checkML.h  main.cpp  resource.h
PR2/Ott - An Elemental Journey/Src/: Entity.h  Manager.cpp  Manager.h  anims.cpp  anims.h  ecs.h
PR2/Ott - An Elemental Journey/componentes/: AddVine.cpp  AddVine.h  AttackCharger.cpp  AttackCharger.h  BackgroundImage.cpp  BackgroundImage.h  Bullet.cpp  Bullet.h  ButtonComponent.cpp  ButtonComponent.h  CameraComponent.cpp  CameraComponent.h  ColliderVine.cpp  ColliderVine.h  Component.cpp  Component.h  EarthBossAnimationController.cpp  EarthBossAnimationController.h  EarthBossAttack.cpp  EarthBossAttack.h  EarthBossMovement.cpp  EarthBossMovement.h  EnemyAnimationController.cpp  EnemyAnimationController.h  EnemyAttack.cpp  EnemyAttack.h  EnemyMeleeAttack.cpp  EnemyMeleeAttack.h  EnemyMovement.cpp  EnemyMovement.h  EnemyShootingAttack.cpp  EnemyShootingAttack.h  EnterBossRoom.cpp  EnterBossRoom.h  FramedImage.cpp  FramedImage.h  Generations.cpp  Generations.h  GrowVine.cpp  GrowVine.h  (+35 more)
PR2/Ott - An Elemental Journey/dependencies/: Exceptions.h  Font.cpp  Font.h  Parser.cpp  Parser.h  Texture.cpp  Texture.h  Vector2D.cpp  Vector2D.h
PR2/Ott - An Elemental Journey/gameflow/: GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  MapState.h  PlayState.h
PR2/Ott - An Elemental Journey/gameflow/maingame/: PlayState.cpp  PlayState.h
PR2/Ott - An Elemental Journey/gameflow/menus/: MainMenuState.cpp  MainMenuState.h  MenuState.cpp  MenuState.h  PauseMenuState.cpp  PauseMenuState.h
PR2/Ott - An Elemental Journey/gameflow/menus/options/: ControlMenuState.cpp  ControlMenuState.h  MusicOptionsMenuState.cpp  MusicOptionsMenuState.h  (+2 more)
PR2/Ott - An Elemental Journey/gameflow/play/: JoystickInput.cpp  JoystickInput.h  PlayState.cpp  PlayState.h
PR2/Ott - An Elemental Journey/gameobjects/: Bullet.cpp  Bullet.h  CollisionObject.cpp  CollisionObject.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  InteractuableObject.cpp  InteractuableObject.h  Mapa.cpp  Mapa.h  MeleeEnemy.cpp  MeleeEnemy.h  MovingObject.h  Sanctuary.cpp  Sanctuary.h  SlimeEnemy.cpp  SlimeEnemy.h  staticEnemy.cpp  staticEnemy.h
PR2/Ott - An Elemental Journey/gameobjects/Ott/: Ott.cpp  Ott.h  Shield.cpp  Shield.h  Whip.cpp  Whip.h
PR2/Ott - An Elemental Journey/gameobjects/Physics/: Ground.h
PR2/Ott - An Elemental Journey/loaders/: FontLoader.cpp  FontLoader.h  TextureLoader.cpp  TextureLoader.h
PR2/Ott - An Elemental Journey/resources/: EarthMap2.tmx
PR2/Ott - An Elemental Journey/resources/config/: ott.resources.mac.json  ott.resources.windows.json
PR2/Ott - An Elemental Journey/resources/levels/: BossMap.tmx  EarthMap.tmx  EarthMap2.tmx  EarthMap3.tmx  FinalBossMap.tmx  FireMap.tmx  FireMap2.tmx  MapaPruebas.tiled-session  MapaQA.tmx  Tiles_Agua_Bosque.tsx  TilesettAgua.tsx  TilesssOscuridad.tsx  WaterBossMap.tmx  WaterMap.tmx
PR2/Ott - An Elemental Journey/resources/saves/: temporalUniqueSave.sv
PR2/Ott - An Elemental Journey/resources/sound/: Nueva grabación.m4a
PR2/Ott - An Elemental Journey/resources/txt_info/: sanctuaryInfo.txt
PR2/Ott - An Elemental Journey/sdlutils/: macros.h  sdlutils_demo.cpp  sdlutils_demo.h
PR2/Ott - An Elemental Journey/src/: main.cpp
PR2/Ott - An Elemental Journey/src/components/: Acceleration.cpp  Acceleration.h  ActiveWater.cpp  ActiveWater.h  AddVine.h  AttackCharger.h  AttractionComponent.cpp  AttractionComponent.h  AutoDestroy.cpp  AutoDestroy.h  BackgroundImage.cpp  BackgroundImage.h  BlackHoleAnimationComp.cpp  BlackHoleAnimationComp.h  BossDoor.cpp  BossDoor.h  BossHealthBar.cpp  BossHealthBar.h  BubblePop.cpp  BubblePop.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CameraComponent.cpp  CameraComponent.h  ChargedAttackBar.cpp  ChargedAttackBar.h  ColliderVine.cpp  ColliderVine.h  DamageArea.cpp  DamageArea.h  Destruction.cpp  Destruction.h  EarthBossAnimationController.cpp  EarthBossAnimationController.h  EarthBossAttack.cpp  EarthBossAttack.h  EarthBossManager.cpp  EarthBossManager.h  (+127 more)
PR2/Ott - An Elemental Journey/src/ecs/: Component.h  Entity.h  Manager.cpp  Manager.h  anims.cpp  anims.h  colliders.cpp  colliders.h
PR2/Ott - An Elemental Journey/src/game/: Constructors.h  Game.cpp  Game.h  ecs.h
PR2/Ott - An Elemental Journey/src/sdlutils/: InputHandler.h  Music.cpp  Music.h  SDLUtils.cpp  SDLUtils.h  SoundEffect.cpp  SoundEffect.h  Texture.cpp  Texture.h
PR2/Ott - An Elemental Journey/src/states/: FinalCreditsState.cpp  FinalCreditsState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  MapState.cpp  MapState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h
PR2/Ott - An Elemental Journey/src/utils/: checkML.h
PR2/Ott - An Elemental Journey/ui/: Button.cpp  Button.h  ChargedAttackBar.cpp  ChargedAttackBar.h  HealthBar.cpp  HealthBar.h  ScreenDarkener.cpp  ScreenDarkener.h  Slider.cpp  Slider.h  Text.cpp  Text.h  UIElement.cpp  UIElement.h  UIText.cpp  UIText.h
PR2/Ott - An Elemental Journey/utils/: Elements.cpp  Elements.h  InputHandler.h  Trigger.cpp  Trigger.h
PR2/Ott - An Elemental Journey/x64/Debug/: Ott - An Elemental Journey.exe.recipe  Ott - An Elemental Journey.ilk  Ott - An Elemental Journey.res  vc143.idb
PR2/TPV2/: info.txt
PR2/TPV2/SDL2-2.0.7/include/: SDL_audio.h
PR2/TPV2/TPV2/: TPV2.vcxproj  TPV2.vcxproj.filters
PR2/fonts/: fonts.info
PR2/images/: images.info
PR2/images/levels/: leveltexture.info
PR2/images/ui/: button.aseprite  charged-bar.aseprite  flags.aseprite  largebutton.aseprite  slider.aseprite
PR2/levels/: DEMO.tmx  EarthMap.tmx  ForestKingdom.tmx  levels.info
(+85 files in other folders)
